--- a/client/public/game.html
+++ b/client/public/game.html
@@ -54,7 +54,7 @@
 </head>
 <script>
 
-    // Server domain, currently it is production
+    // Server domain, currently it is localhost
 
     let socket = io.connect('http://localhost:5000', { transports: ['websocket'] }),
 
